Adjust namescpace Api controllers

--- a/SchoolExpress.WebService/wwwroot/style.css
+++ b/SchoolExpress.WebService/wwwroot/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #f4f4f4;
-    font-family: "Arial", Serif;
+    font-family: "Arial", serif;
     overflow-x: hidden;
 }
 
